--- a/templates/admin-change-request-columns.html
+++ b/templates/admin-change-request-columns.html
@@ -572,6 +572,8 @@ let editingId = null;
                 'popup_contractor': '협력사 근로자',
                 'popup_department': '부서',
                 'popup_building': '건물',
+                'popup_division': '사업부',
+                'popup_building': '건물',
                 'linked_dept': '연결-부서',
                 'linked_text': '연결-텍스트'
             };
@@ -1361,6 +1363,14 @@ let editingId = null;
                     { name: 'ID', key_suffix: '_id', type: 'linked_text' },
                     { name: '소속업체', key_suffix: '_company', type: 'popup_company' },
                     { name: '사업자번호', key_suffix: '_bizno', type: 'linked_text' }
+                ]
+            },
+            'division': {
+                name: '사업부',
+                columns: [
+                    { name: '사업부명', key_suffix: '', type: 'popup_division' },
+                    { name: '사업부코드', key_suffix: '_code', type: 'linked_text' },
+                    { name: '상위사업부', key_suffix: '_parent', type: 'linked_text' }
                 ]
             }
         };
